fix counter state

--- a/src/nfa_dfa.ipynb
+++ b/src/nfa_dfa.ipynb
@@ -1,22 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 23,
       "metadata": {
         "id": "wCgGddu0aq8Z"
       },
@@ -31,16 +17,25 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## NFA"
-      ],
       "metadata": {
         "id": "wbcI1ewPg4R2"
-      }
+      },
+      "source": [
+        "## NFA"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {
+        "id": "21Sj5mZDgUcI"
+      },
+      "outputs": [],
       "source": [
+        "from dataclasses import dataclass\n",
+        "from typing import List\n",
+        "import json\n",
+        "from Visualize_NFA import draw_nfa\n",
         "precedence={\n",
         "    \"*\": 6,\n",
         "    \"+\": 5,\n",
@@ -63,7 +58,11 @@
         "        State._index_counter += 1\n",
         "        return index\n",
         "    pass\n",
-        "@dataclass\n",
+        "    @staticmethod\n",
+        "    def reset_index_counter():\n",
+        "        State._index_counter = 0\n",
+        "    pass\n",
+        "@dataclass  \n",
         "class Edge:\n",
         "        from_:State\n",
         "        to:State\n",
@@ -76,14 +75,15 @@
         "    edges:list[Edge]\n",
         "    states:list[int]\n",
         "\n",
-        "\n",
+        "     \n",
         "class NFA:\n",
         "    def __init__(self, regex):\n",
+        "        State.reset_index_counter()\n",
         "        if not self.is_valid_regex(regex):\n",
         "            raise ValueError(\"Invalid regex\")\n",
         "        tokens=self.tokenize(regex)\n",
         "        tokens=self.add_concatenation(tokens) #& operator\n",
-        "\n",
+        "        \n",
         "        postfix=self.regex_to_postfix(tokens)\n",
         "        print(postfix)\n",
         "        nfa=self.build_nfa(postfix)\n",
@@ -92,20 +92,20 @@
         "\n",
         "    def construct_json(self,nfa):\n",
         "        nfa_json={}\n",
-        "        nfa_json[\"startingState\"] = str(nfa.start.index)\n",
+        "        nfa_json[\"startingState\"] = \"s\"+str(nfa.start.index)\n",
         "        for state in nfa.states:\n",
-        "            nfa_json[str(state.index)]={}\n",
-        "            nfa_json[str(state.index)][\"isTerminatingState\"]=state==nfa.end\n",
+        "            nfa_json[\"s\"+str(state.index)]={}\n",
+        "            nfa_json[\"s\"+str(state.index)][\"isTerminatingState\"]=state==nfa.end\n",
         "\n",
         "        for edge in nfa.edges:\n",
         "            edge_from=edge.from_\n",
         "            edge_to=edge.to\n",
         "            if edge.label==\"epsilon\":\n",
         "                edge.label=\"ε\"\n",
-        "            if  not edge.label in nfa_json[str(edge_from.index)] :\n",
-        "                nfa_json[str(edge_from.index)][edge.label]=[str(edge_to.index)]\n",
+        "            if  not edge.label in nfa_json[\"s\"+str(edge_from.index)] :\n",
+        "                nfa_json[\"s\"+str(edge_from.index)][edge.label]=[\"s\"+str(edge_to.index)]\n",
         "            else:\n",
-        "                nfa_json[str(edge_from.index)][edge.label].append(str(edge_to.index))\n",
+        "                nfa_json[\"s\"+str(edge_from.index)][edge.label].append(\"s\"+str(edge_to.index))\n",
         "\n",
         "        ##save the nfa to a json file\n",
         "        with open(\"nfa.json\",\"w\", encoding=\"utf-8\") as file:\n",
@@ -115,7 +115,7 @@
         "        stack=[]\n",
         "        for token in postfix:\n",
         "            if token.isalnum():\n",
-        "\n",
+        "               \n",
         "                stack.append(self.construct_nfa( token))\n",
         "            elif token==\"*\":\n",
         "                stack.append(self.kleene_closure(stack.pop()))\n",
@@ -132,15 +132,15 @@
         "                nfa1=stack.pop()\n",
         "                stack.append(self.concatenation(nfa1,nfa2))\n",
         "            elif token==\"|\":\n",
-        "                nfa2=stack.pop()\n",
+        "                nfa2=stack.pop()    \n",
         "                nfa1=stack.pop()\n",
         "                stack.append(self.union(nfa1,nfa2))\n",
         "        nfa=stack.pop()\n",
         "        return nfa\n",
         "    def construct_nfa(self, char):\n",
-        "\n",
+        "       \n",
         "        start=State()\n",
-        "        end=State()\n",
+        "        end=State() \n",
         "        edge=Edge(start,end,char)\n",
         "        states=[start,end]\n",
         "        nfa= NFA_node(start,end,[edge],states)\n",
@@ -149,7 +149,7 @@
         "        nfa1.states.extend(nfa2.states)\n",
         "        nfa1.edges.extend(nfa2.edges)\n",
         "        nfa1.edges.append(Edge(nfa1.end, nfa2.start, \"epsilon\"))\n",
-        "\n",
+        "       \n",
         "        nfa1.end = nfa2.end\n",
         "        return nfa1\n",
         "    def union(self, nfa1, nfa2):\n",
@@ -165,10 +165,10 @@
         "        nfa1.edges.append(Edge(nfa1.end,end, \"epsilon\"))\n",
         "        nfa1.edges.append(Edge(nfa2.end,end, \"epsilon\"))\n",
         "        nfa1.start=start\n",
-        "\n",
+        "        \n",
         "        nfa1.end=end\n",
         "        return nfa1\n",
-        "\n",
+        "       \n",
         "    def kleene_closure(self, nfa):\n",
         "        start = State()\n",
         "        end = State()\n",
@@ -192,9 +192,9 @@
         "        return nfa\n",
         "    def positive_closure(self, nfa):\n",
         "        start = State()\n",
-        "        end = State()\n",
+        "        end = State()   \n",
         "        nfa.states.extend([start, end])\n",
-        "\n",
+        "    \n",
         "\n",
         "        nfa.edges.append(Edge(start, nfa.start, \"epsilon\"))\n",
         "        nfa.edges.append(Edge(nfa.end, start, \"epsilon\"))\n",
@@ -203,7 +203,7 @@
         "        nfa.end = end\n",
         "        return nfa\n",
         "\n",
-        "\n",
+        "  \n",
         "\n",
         "    def add_concatenation(self,tokens):\n",
         "        new_tokens=[]\n",
@@ -235,10 +235,10 @@
         "            ##check that char belongs to the valid set of characters\n",
         "            if not char.isalnum() and char not in \"-()|*+?[]\\\\\":\n",
         "                return False\n",
-        "            if escaped:\n",
+        "            if escaped:  \n",
         "                # Allow any character after `\\` (like `\\[` or `\\+`)\n",
-        "                escaped = False\n",
-        "                continue\n",
+        "                escaped = False  \n",
+        "                continue  \n",
         "            if char == '(':\n",
         "                stack.append('(')\n",
         "            elif char == ')':\n",
@@ -269,13 +269,13 @@
         "            # Ensure `|` is not at start or end\n",
         "            elif char == \"|\" and (i == 0 or i == len(regex) - 1 or regex[i - 1] in \"(|\"):\n",
         "                return False\n",
-        "\n",
+        "            \n",
         "            # Ensure `\\` is followed by something\n",
         "            elif char == \"\\\\\":\n",
         "                escaped = True\n",
         "                if i == len(regex) - 1:  # Last character cannot be `\\`\n",
         "                    return False\n",
-        "\n",
+        "            \n",
         "            prev_char = char\n",
         "\n",
         "        # Ensure no unclosed brackets or parentheses\n",
@@ -283,11 +283,11 @@
         "    def valid_range(self, bracket_content):\n",
         "        \"\"\"\n",
         "        Check if the content of a bracket is a valid range\n",
-        "\n",
+        "        \n",
         "        \"\"\"\n",
         "        if not bracket_content:\n",
         "             return False\n",
-        "\n",
+        "    \n",
         "        parts = bracket_content.split('-')\n",
         "        i = 0\n",
         "        while i < len(bracket_content):\n",
@@ -297,14 +297,14 @@
         "                i += 3  # Skip over the range\n",
         "            else:\n",
         "                i += 1  # Move to the next character\n",
-        "\n",
+        "        \n",
         "        return True\n",
         "\n",
         "\n",
         "    def tokenize(self,regex):\n",
         "        \"\"\"\"\n",
         "        Tokenize the regex string\n",
-        "\n",
+        "    \n",
         "        \"\"\"\n",
         "        tokens=[]\n",
         "        escaped=False\n",
@@ -324,14 +324,14 @@
         "    def regex_to_postfix(self,tokens):\n",
         "        \"\"\"\n",
         "        Convert the regex to postfix notation\n",
-        "\n",
+        "        \n",
         "        \"\"\"\n",
         "        stack=[]\n",
         "        postfix=[]\n",
         "        i =0\n",
         "        while i <  (len(tokens)):\n",
         "            token=tokens[i]\n",
-        "\n",
+        "            \n",
         "            i+=1\n",
         "            if token.isalnum():\n",
         "                postfix.append(token)\n",
@@ -346,7 +346,7 @@
         "                while i < len(tokens) and tokens[i] != \"]\":\n",
         "                    if i + 2 < len(tokens) and tokens[i + 1] == \"-\":  # Handle ranges like a-c\n",
         "                        start, end = tokens[i], tokens[i + 2]\n",
-        "\n",
+        "                      \n",
         "                        expanded_chars.extend(chr(j) for j in range(ord(start), ord(end) + 1))\n",
         "                        i += 3  # Skip `start-end`\n",
         "                    else:\n",
@@ -357,7 +357,7 @@
         "\n",
         "                for char in expanded_chars[1:]:\n",
         "                                postfix.append(char)\n",
-        "                                postfix.append(\"|\")\n",
+        "                                postfix.append(\"|\")  \n",
         "\n",
         "            elif token in \"*+?.\":\n",
         "                postfix.append(token)\n",
@@ -365,35 +365,35 @@
         "                while stack  and precedence[stack[-1]]>=precedence[token]:\n",
         "                    postfix.append(stack.pop())\n",
         "                stack.append(token)\n",
-        "\n",
+        "           \n",
         "        while stack:\n",
         "            postfix.append(stack.pop())\n",
         "        return postfix\n"
-      ],
-      "metadata": {
-        "id": "21Sj5mZDgUcI"
-      },
-      "execution_count": 58,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# NFA to Minimized DFA"
-      ],
       "metadata": {
         "id": "Uq2UjOXwg8tv"
-      }
+      },
+      "source": [
+        "# NFA to Minimized DFA"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "id": "HtN6mjNnli51"
+      },
+      "outputs": [],
       "source": [
         "class Minimized_DFA:\n",
         "    def __init__(self, nfa_json):\n",
         "        dfa=self.nfa_to_dfa(nfa_json)\n",
         "        minimized_dfa=self.minimize_dfa(dfa)\n",
-        "        with open(\"minimized_dfa.json\", \"w\") as file:\n",
-        "            json.dump(minimized_dfa, file, indent=4)\n",
+        "        with open(\"minimized_dfa.json\", \"w\", encoding=\"utf-8\") as file:\n",
+        "            json.dump(minimized_dfa, file, indent=4, ensure_ascii=False)\n",
         "        draw(minimized_dfa,\"minimized_dfa_graph\")\n",
         "\n",
         "\n",
@@ -410,7 +410,7 @@
         "        return closure\n",
         "\n",
         "    def nfa_to_dfa(self,nfa_json):\n",
-        "        with open(nfa_json, \"r\") as file:\n",
+        "        with open(nfa_json, \"r\", encoding=\"utf-8\") as file:\n",
         "            nfa = json.load(file)\n",
         "        starting_state = nfa[\"startingState\"]\n",
         "        nfa_states = {state: state_info for state, state_info in nfa.items() if state != \"startingState\"}\n",
@@ -493,26 +493,25 @@
         "        return minimized_dfa\n",
         "\n",
         "\n",
-        "\n",
-        ""
-      ],
-      "metadata": {
-        "id": "HtN6mjNnli51"
-      },
-      "execution_count": 59,
-      "outputs": []
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Visiualizing Graphs"
-      ],
       "metadata": {
         "id": "bIAi0-S4hSwX"
-      }
+      },
+      "source": [
+        "# Visiualizing Graphs"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "c-RwM5dpgw3r"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "def draw(json_format, output_file):\n",
@@ -555,20 +554,11 @@
         "    dot.render(output_file)\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "c-RwM5dpgw3r"
-      },
-      "execution_count": 60,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "nfa=NFA(\"(a|b)*abb\")\n",
-        "minimized_dfa=Minimized_DFA(\"/content/nfa.json\")\n",
-        "\n"
-      ],
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -576,16 +566,50 @@
         "id": "gJF41B9Yho6B",
         "outputId": "47ee1917-9ce0-41f2-f7f5-4e6f7b2317ab"
       },
-      "execution_count": 61,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "['a', 'b', '|', '*', 'a', '&', 'b', '&', 'b', '&']\n"
+            "['a', 'b', '|', 'c', '|', 'd', '|', 'e', '|', 'f', '|', '0', '|', '1', '|', '2', '|', '3', '|', '4', '|', '5', '|', '6', '|', '7', '|', '8', '|', '9', '|', '3', '&', '2', '&']\n"
           ]
         }
+      ],
+      "source": [
+        "nfa=NFA(\"[a-f0-9]32\")\n",
+        "# minimized_dfa=Minimized_DFA(\"/content/nfa.json\")\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "minimized_dfa=Minimized_DFA(\"./nfa.json\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
