change form s to S

--- a/src/nfa_dfa.ipynb
+++ b/src/nfa_dfa.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 3,
       "metadata": {
         "id": "wCgGddu0aq8Z"
       },
@@ -26,11 +26,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 4,
       "metadata": {
         "id": "21Sj5mZDgUcI"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.20.3\n"
+          ]
+        }
+      ],
       "source": [
         "from dataclasses import dataclass\n",
         "from typing import List\n",
@@ -78,9 +86,14 @@
         "     \n",
         "class NFA:\n",
         "    def __init__(self, regex):\n",
-        "        State.reset_index_counter()\n",
-        "        if not self.is_valid_regex(regex):\n",
-        "            raise ValueError(\"Invalid regex\")\n",
+        "        try:\n",
+        "            State.reset_index_counter()\n",
+        "            if not self.is_valid_regex(regex):\n",
+        "                raise ValueError(\"Invalid regex\")\n",
+        "        except Exception as e:\n",
+        "                print(e)\n",
+        "                return\n",
+        "\n",
         "        tokens=self.tokenize(regex)\n",
         "        tokens=self.add_concatenation(tokens) #& operator\n",
         "        \n",
@@ -89,23 +102,23 @@
         "        nfa=self.build_nfa(postfix)\n",
         "        nfa_json=self.construct_json(nfa)\n",
         "        draw(nfa_json,\"nfa_graph\")\n",
-        "\n",
+        "    \n",
         "    def construct_json(self,nfa):\n",
         "        nfa_json={}\n",
-        "        nfa_json[\"startingState\"] = \"s\"+str(nfa.start.index)\n",
+        "        nfa_json[\"startingState\"] = \"S\"+str(nfa.start.index)\n",
         "        for state in nfa.states:\n",
-        "            nfa_json[\"s\"+str(state.index)]={}\n",
-        "            nfa_json[\"s\"+str(state.index)][\"isTerminatingState\"]=state==nfa.end\n",
+        "            nfa_json[\"S\"+str(state.index)]={}\n",
+        "            nfa_json[\"S\"+str(state.index)][\"isTerminatingState\"]=state==nfa.end\n",
         "\n",
         "        for edge in nfa.edges:\n",
         "            edge_from=edge.from_\n",
         "            edge_to=edge.to\n",
         "            if edge.label==\"epsilon\":\n",
         "                edge.label=\"ε\"\n",
-        "            if  not edge.label in nfa_json[\"s\"+str(edge_from.index)] :\n",
-        "                nfa_json[\"s\"+str(edge_from.index)][edge.label]=[\"s\"+str(edge_to.index)]\n",
+        "            if  not edge.label in nfa_json[\"S\"+str(edge_from.index)] :\n",
+        "                nfa_json[\"S\"+str(edge_from.index)][edge.label]=[\"S\"+str(edge_to.index)]\n",
         "            else:\n",
-        "                nfa_json[\"s\"+str(edge_from.index)][edge.label].append(\"s\"+str(edge_to.index))\n",
+        "                nfa_json[\"S\"+str(edge_from.index)][edge.label].append(\"S\"+str(edge_to.index))\n",
         "\n",
         "        ##save the nfa to a json file\n",
         "        with open(\"nfa.json\",\"w\", encoding=\"utf-8\") as file:\n",
@@ -242,6 +255,8 @@
         "            if char == '(':\n",
         "                stack.append('(')\n",
         "            elif char == ')':\n",
+        "                if prev_char in \"(|\":\n",
+        "                    return False\n",
         "                if not stack or stack[-1] != '(':\n",
         "                    return False\n",
         "                stack.pop()\n",
@@ -382,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 5,
       "metadata": {
         "id": "HtN6mjNnli51"
       },
@@ -507,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 6,
       "metadata": {
         "id": "c-RwM5dpgw3r"
       },
@@ -558,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -571,24 +586,29 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['a', 'b', '|', 'c', '|', 'd', '|', 'e', '|', 'f', '|', '0', '|', '1', '|', '2', '|', '3', '|', '4', '|', '5', '|', '6', '|', '7', '|', '8', '|', '9', '|', '3', '&', '2', '&']\n"
+            "['a', 'b', '|', 'c', '|', 'd', 'e', '|', 'f', '|', '&']\n"
           ]
         }
       ],
       "source": [
-        "nfa=NFA(\"[a-f0-9]32\")\n",
-        "# minimized_dfa=Minimized_DFA(\"/content/nfa.json\")\n",
-        "\n"
+        "nfa=NFA(\"[abc](d|e|f)\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
         "minimized_dfa=Minimized_DFA(\"./nfa.json\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -607,7 +627,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.0"
     }
   },
   "nbformat": 4,
