--- a/src/nfa_dfa.ipynb
+++ b/src/nfa_dfa.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 58,
       "metadata": {
         "id": "wCgGddu0aq8Z"
       },
@@ -26,24 +26,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 59,
       "metadata": {
         "id": "21Sj5mZDgUcI"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0.20.3\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from dataclasses import dataclass\n",
         "from typing import List\n",
         "import json\n",
-        "from Visualize_NFA import draw_nfa\n",
         "precedence={\n",
         "    \"*\": 6,\n",
         "    \"+\": 5,\n",
@@ -364,14 +355,25 @@
         "                      \n",
         "                        expanded_chars.extend(chr(j) for j in range(ord(start), ord(end) + 1))\n",
         "                        i += 3  # Skip `start-end`\n",
+        "                    elif tokens[i] in \"*+?.|\":\n",
+        "                        expanded_chars[-1] += tokens[i]\n",
+        "                        i+=1\n",
         "                    else:\n",
         "                        expanded_chars.append(tokens[i])\n",
         "                        i += 1\n",
         "                i += 1\n",
-        "                postfix.append(expanded_chars[0])\n",
+        "                if len(expanded_chars[0]) > 1:\n",
+        "                                    postfix.append(expanded_chars[0][0])\n",
+        "                                    postfix.append(expanded_chars[0][1])\n",
+        "                else:\n",
+        "                    postfix.append(expanded_chars[0])\n",
         "\n",
         "                for char in expanded_chars[1:]:\n",
-        "                                postfix.append(char)\n",
+        "                                if len(char) > 1:\n",
+        "                                    postfix.append(char[0])\n",
+        "                                    postfix.append(char[1])\n",
+        "                                else:   \n",
+        "                                    postfix.append(char)\n",
         "                                postfix.append(\"|\")  \n",
         "\n",
         "            elif token in \"*+?.\":\n",
@@ -397,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 60,
       "metadata": {
         "id": "HtN6mjNnli51"
       },
@@ -522,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 61,
       "metadata": {
         "id": "c-RwM5dpgw3r"
       },
@@ -573,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -586,21 +588,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['a', 'b', '|', 'c', '|', 'd', 'e', '|', 'f', '|', '&']\n"
+            "['b', 'c', '|', '*', 'c', 'd', '&', '+', '&']\n"
           ]
         }
       ],
       "source": [
-        "nfa=NFA(\"[abc](d|e|f)\")"
+        "nfa=NFA(\"[bc]*(cd)+\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
-        "minimized_dfa=Minimized_DFA(\"./nfa.json\")"
+        "minimized_dfa=Minimized_DFA(\"nfa.json\")"
       ]
     },
     {
