--- a/src/nfa_dfa.ipynb
+++ b/src/nfa_dfa.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 5,
       "metadata": {
         "id": "wCgGddu0aq8Z"
       },
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 11,
       "metadata": {
         "id": "21Sj5mZDgUcI"
       },
@@ -252,6 +252,8 @@
         "                    return False\n",
         "                stack.pop()\n",
         "            elif char == '[':\n",
+        "                if (in_bracket):\n",
+        "                    return False\n",
         "                in_bracket = True\n",
         "                bracket_content = \"\"\n",
         "                stack.append('[')\n",
@@ -291,12 +293,15 @@
         "        Check if the content of a bracket is a valid range\n",
         "        \n",
         "        \"\"\"\n",
-        "        if not bracket_content:\n",
+        "        if not bracket_content or bracket_content[0] == '-' or bracket_content[-1] == '-':\n",
         "             return False\n",
         "    \n",
         "        parts = bracket_content.split('-')\n",
         "        i = 0\n",
         "        while i < len(bracket_content):\n",
+        "            if (not bracket_content[i].isalnum() ):\n",
+        "\n",
+        "                return False\n",
         "            if i + 2 < len(bracket_content) and bracket_content[i + 1] == '-':\n",
         "                if bracket_content[i] >= bracket_content[i + 2]:\n",
         "                    return False  # Invalid range (e.g., Z-A)\n",
@@ -355,26 +360,16 @@
         "                      \n",
         "                        expanded_chars.extend(chr(j) for j in range(ord(start), ord(end) + 1))\n",
         "                        i += 3  # Skip `start-end`\n",
-        "                    elif tokens[i] in \"*+?.|\":\n",
-        "                        expanded_chars[-1] += tokens[i]\n",
-        "                        i+=1\n",
         "                    else:\n",
         "                        expanded_chars.append(tokens[i])\n",
         "                        i += 1\n",
         "                i += 1\n",
-        "                if len(expanded_chars[0]) > 1:\n",
-        "                                    postfix.append(expanded_chars[0][0])\n",
-        "                                    postfix.append(expanded_chars[0][1])\n",
-        "                else:\n",
-        "                    postfix.append(expanded_chars[0])\n",
+        "                postfix.append(expanded_chars[0])\n",
         "\n",
         "                for char in expanded_chars[1:]:\n",
-        "                                if len(char) > 1:\n",
-        "                                    postfix.append(char[0])\n",
-        "                                    postfix.append(char[1])\n",
-        "                                else:   \n",
-        "                                    postfix.append(char)\n",
+        "                                postfix.append(char)\n",
         "                                postfix.append(\"|\")  \n",
+        "\n",
         "\n",
         "            elif token in \"*+?.\":\n",
         "                postfix.append(token)\n",
@@ -399,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 12,
       "metadata": {
         "id": "HtN6mjNnli51"
       },
@@ -524,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 13,
       "metadata": {
         "id": "c-RwM5dpgw3r"
       },
@@ -575,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -588,17 +583,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['b', 'c', '|', '*', 'c', 'd', '&', '+', '&']\n"
+            "Invalid regex\n"
           ]
         }
       ],
       "source": [
-        "nfa=NFA(\"[bc]*(cd)+\")"
+        "nfa=NFA(\"[o+b+]\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -610,7 +605,10 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "##handle[+]\n",
+        "##handle //"
+      ]
     },
     {
       "cell_type": "code",
