--- a/src/nfa_dfa.ipynb
+++ b/src/nfa_dfa.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "wCgGddu0aq8Z"
       },
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "21Sj5mZDgUcI"
       },
@@ -86,6 +86,7 @@
         "                return\n",
         "\n",
         "        tokens=self.tokenize(regex)\n",
+        "        tokens=self.handle_dot(tokens) #handle the dot operator\n",
         "        tokens=self.add_concatenation(tokens) #& operator\n",
         "        \n",
         "        postfix=self.regex_to_postfix(tokens)\n",
@@ -93,6 +94,22 @@
         "        nfa=self.build_nfa(postfix)\n",
         "        nfa_json=self.construct_json(nfa)\n",
         "        draw(nfa_json,\"nfa_graph\")\n",
+        "    def handle_dot(self,tokens):\n",
+        "        \"\"\"\n",
+        "        Handle the dot operator in the regex\n",
+        "        \"\"\"\n",
+        "        new_tokens=[]\n",
+        "        i=0\n",
+        "        string=\"[a-zA-Z0-9]\"\n",
+        "        while i < len(tokens):\n",
+        "            token=tokens[i]\n",
+        "            if token==\".\":\n",
+        "                for char in string:\n",
+        "                    new_tokens.append(char)\n",
+        "            else:\n",
+        "                new_tokens.append(token)\n",
+        "            i+=1\n",
+        "        return new_tokens\n",
         "    \n",
         "    def construct_json(self,nfa):\n",
         "        nfa_json={}\n",
@@ -127,10 +144,7 @@
         "                stack.append(self.positive_closure(stack.pop()))\n",
         "            elif token==\"?\":\n",
         "                stack.append(self.zero_or_one(stack.pop()))\n",
-        "            elif token==\".\":\n",
-        "                nfa2=stack.pop()\n",
-        "                nfa1=stack.pop()\n",
-        "                stack.append(self.concatenation(nfa1,nfa2))\n",
+        "          \n",
         "            elif token==\"&\":\n",
         "                nfa2=stack.pop()\n",
         "                nfa1=stack.pop()\n",
@@ -237,7 +251,7 @@
         "\n",
         "        for i, char in enumerate(regex):\n",
         "            ##check that char belongs to the valid set of characters\n",
-        "            if not char.isalnum() and char not in \"-()|*+?[]\\\\\":\n",
+        "            if not char.isalnum() and char not in \".-()|*+?[]\\\\\":\n",
         "                return False\n",
         "            if escaped:  \n",
         "                # Allow any character after `\\` (like `\\[` or `\\+`)\n",
@@ -394,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {
         "id": "HtN6mjNnli51"
       },
@@ -519,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {
         "id": "c-RwM5dpgw3r"
       },
@@ -570,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -578,36 +592,29 @@
         "id": "gJF41B9Yho6B",
         "outputId": "47ee1917-9ce0-41f2-f7f5-4e6f7b2317ab"
       },
+      "outputs": [],
+      "source": [
+        "def main(regex):\n",
+        "    NFA(regex)\n",
+        "    Minimized_DFA(\"nfa.json\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Invalid regex\n"
+            "['a', 'b', '&', 'c', '&', 'd', '&']\n"
           ]
         }
       ],
       "source": [
-        "nfa=NFA(\"[o+b+]\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "minimized_dfa=Minimized_DFA(\"nfa.json\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "##handle[+]\n",
-        "##handle //"
+        "regex=\"abcd\"\n",
+        "main(regex)"
       ]
     },
     {
